<resources>
    <string name="app_name">Monumap</string>
    <string name="home_title">MONUMAP</string>
    <string name="route_button">Calculate Route</string>
    <string name="destination_home">Destination</string>
    <string name="start_home">Start</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="title_home">Home</string>
    <string name="title_next">Next</string>
    <string name="title_previous">Previous</string>
    <string name="default_instruction_title">No Route</string>
    <string name="toolbar_cancel">Cancel</string>
    <string name="direction_icon">Direction icon for instruction</string>
    <string name="route_description"><![CDATA[%1$s —> %2$s]]></string>
    <string name="cancel_title">Cancel Route</string>
    <string name="cancel_message">Are you sure you want to cancel this route?</string>
    <string name="cancel_yes">YES</string>
    <string name="cancel_no">NO</string>
    <string name="complete_title">Route Complete</string>
    <string name="complete_message">You have arrived at your destination!</string>
    <string name="complete_ok">OK</string>
    <string name="no_route_title">Route Invalid</string>
    <string name="no_route_message">No route could be found between the specified start and destination locations!</string>
    <string name="no_route_ok">OK</string>
    <string name="instruction_info_title"><![CDATA[Instruction #%1$d]]></string>
    <string name="instruction_info_ok">OK</string>
    <string name="instruction_duration"><![CDATA[%1$s min.]]></string>
    <string name="instruction_distance"><![CDATA[%1$s ft.]]></string>
    <string name="instruction_info_duration"><![CDATA[Duration: %1$s min.]]></string>
    <string name="instruction_info_distance"><![CDATA[Distance: %1$s ft.]]></string>
    <string name="nav_settings_text">Settings</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="settings_save">SAVE</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_title">Settings</string>
    <string name="settings_wheelchair_text">Enable wheelchair accessibility</string>
    <string name="settings_text_to_speech_text">Enable text-to-speech instructions</string>
    <string name="preferences">MONUMAP_PREFS</string>
    <string name="sp_wheelchairAccessibilityEnabled">wheelchairAccessibilityEnabled</string>
    <string name="sp_textToSpeechEnabled">textToSpeechEnabled</string>
    <string name="nav_recent_routes_text">Recent Routes</string>
    <string name="recent_routes_title">Recent Routes</string>
    <string name="recent_routes_no_routes_text">You have no recent routes.</string>
    <string name="settings_recent_routes_text">Number of recent routes</string>
    <string name="sp_recentRoutesPosition">recentRoutesPosition</string>
    <string name="sp_recentRoutesNumber">recentRoutesNumber</string>
    <string name="recent_routes_start_location"><![CDATA[Start: %1$s]]></string>
    <string name="recent_routes_destination_location"><![CDATA[Destination: %1$s]]></string>
    <string name="recent_routes_duration"><![CDATA[Duration: %1$d min.]]></string>
    <string name="recent_routes_distance"><![CDATA[Distance: %1$d ft.]]></string>
    <string name="recent_routes_home_btn_text">Home</string>
    <string name="recent_routes_calc_btn_text">Calculate Route</string>
    <string name="home_building_dropdown_label">Building</string>
    <string name="home_room_dropdown_label">Room</string>
</resources>
