<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/home_title"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/calculate_route"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <TextView
        android:id="@+id/destination_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination_home"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="353dp" />

    <Spinner
        android:id="@+id/destination_building"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="355dp" />

    <Spinner
        android:id="@+id/destination_floor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="353dp" />

    <Spinner
        android:id="@+id/destination_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="295dp"
        tools:layout_editor_absoluteY="353dp" />

    <Button
        android:id="@+id/calculate_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/route_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="551dp" />

</android.support.constraint.ConstraintLayout>