<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/home_drawer"
    tools:context=".Home"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:id="@+id/home_toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="4dp"/>

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:text="@string/home_title"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/start_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/start_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="22dp"
                android:width="100sp"
                android:text="@string/start_home" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginEnd="15dp">

                <TextView
                    android:text="@string/home_building_dropdown_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"/>

                <Spinner
                    android:id="@+id/start_building"
                    android:layout_width="143dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/home_room_dropdown_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"/>

                <Spinner
                    android:id="@+id/start_room"
                    android:layout_width="130dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/destination_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/destination_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="22dp"
                android:width="100sp"
                android:text="@string/destination_home" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginEnd="15dp">

                <TextView
                    android:text="@string/home_building_dropdown_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"/>

                <Spinner
                    android:id="@+id/destination_building"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/home_room_dropdown_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"/>

                <Spinner
                    android:id="@+id/destination_room"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/calculate_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:text="@string/route_button" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:id="@+id/home_nav_view"
        app:menu="@menu/drawer_menu" />



</androidx.drawerlayout.widget.DrawerLayout>